Using mark-sweep GC by default